--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background: linear-gradient(rgb(145, 0, 0), #cccccc);
+  background: linear-gradient(#A91E2E, #cccccc);
   overflow: hidden;
 }
 
@@ -80,7 +80,7 @@ li a:hover {
   height: 0;
   line-height: 1px;
   margin-left: 0;
-  background: #b31523;
+  background: #A91E2E;
   border-radius: 50%;
   text-align: center;
   font-size: 1px;
@@ -96,11 +96,11 @@ li a:hover {
 
 .selector li input:checked + label {
   background: #570606;
-  color: rgb(134, 7, 7);
+  color: rgb(163, 10, 10);
 }
 
 .selector li input:checked + label:hover { 
-  background: #7c0303;
+  background: #9e0303;
 }
 
 .selector.open li input + label {
